--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "BANCHO_HP",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.0.0"
+  }
 }
